--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 ### How to use this document
 # 1. Fill in your info
 # 2. Re-excecute the build in the command line with: bundle exec jekyll serve
-# 3. Push to github
-# NOTE: it looks like you need to rebuild + repush everytime you update this _config.yml file
+# 3. Push to Github
+# NOTE: It looks like you need to rebuild + repush everytime you update this _config.yml file
 
 ### Site Settings ###
 title               : IS445 Jekyll Template 
@@ -10,8 +10,8 @@ description         : >-
                       I am definitely not a corgi!
 baseurl             : ""   # Change to empty quotes if you are hosting your site at <your-username>.github.io directly,
 #                                             otherwise will be hosted at <your-username>.github.io/{{base_url}}
-repository          :                     # Change to <your-username> for github OR, if that doesn't work <your-username>/<your-username>.github.io (or remove it if you don't need remote projects) -- for example, I would put "jnaiman" without the quotes after the ":" here
-open_new_tab        : false                             # Opens external URLs in new tab (works for posts, projects and navbar only)
+repository          : TheWongLife1            # Change to <your-username> for github OR, if that doesn't work <your-username>/<your-username>.github.io (or remove it if you don't need remote projects) -- for example, I would put "jnaiman" without the quotes after the ":" here
+open_new_tab        : false                             # Opens external URLs in new tab (Works for posts, projects & navbar only)
 
 
 ### Plugins ###
@@ -40,7 +40,7 @@ author:
 # dribbble          : your_username
   email             : username@domain.com
 #  facebook          : your_username
-  github            : jnaiman # JPN
+  github            : TheWongLife1
 # gitlab            : your_username
 # instagram         : your_username
 # kaggle            : your_username
