--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,10 @@
 ### Site Settings ###
 title               : IS445 Jekyll Template 
 description         : >-
-                      I am definitely not a corgi!
-baseurl             : ""   # Change to empty quotes if you are hosting your site at <your-username>.github.io directly,
+                      I'm definitely not a corgi!
+baseurl             : ""   # Change to empty quotes if you're hosting your site at <your-username>.github.io directly,
 #                                             otherwise will be hosted at <your-username>.github.io/{{base_url}}
-repository          : TheWongLife1            # Change to <your-username> for github OR, if that doesn't work <your-username>/<your-username>.github.io (or remove it if you don't need remote projects) -- for example, I would put "jnaiman" without the quotes after the ":" here
+repository          : TheWongLife1/TheWongLife1.github.io  # Change to <your-username> for github OR, if that doesn't work <your-username>/<your-username>.github.io (Or remove it if you don't need remote projects) -- for example, I'd put "jnaiman" without the quotes after the ":" here
 open_new_tab        : false                             # Opens external URLs in new tab (Works for posts, projects & navbar only)
 
 
