--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,6 @@ baseurl             : ""   # Change to empty quotes if you're hosting your site 
 repository          : TheWongLife1.github.io  # Change to <your-username> for github OR, if that doesn't work <your-username>/<your-username>.github.io (Or remove it if you don't need remote projects) -- for example, I'd put "jnaiman" without the quotes after the ":" here
 open_new_tab        : false                             # Opens external URLs in new tab (Works for posts, projects & navbar only)
 
-
 ### Plugins ###
 plugins:
   - jekyll-archives
@@ -31,14 +30,13 @@ nav_exclude:                                            # The following paths ar
   - pages/index.md
   - documentation/partials/**                           # For Documentation Only
 
-
 ### Author Info ###
 author:
   name              : A. P. Corgi
   image             : https://media.tenor.com/8RcIoWTKYR4AAAAe/scuze-corgi.png
 #  behance           : your_username
 # dribbble          : your_username
-  email             : username@domain.com
+  email             : nwong66238@gmail.com
 #  facebook          : your_username
   github            : TheWongLife1
 # gitlab            : your_username
@@ -51,15 +49,13 @@ author:
 # stackoverflow     : your_user_id
 # tumblr            : your_username.tumblr.com
 #  twitch            : your_username
-  twitter           : your_username
+# twitter           : your_username
 #  vimeo             : your_username
-  youtube           : your_channel_name
+# youtube           : your_channel_name
 # keybase           : your_username
-
 
 ### Posts ###
 permalink: /blog/:title
-
 
 ### Collections ###
 collections:
@@ -69,18 +65,15 @@ collections:
   elements:                                             # For Documentation Only
     output: true                                        # For Documentation Only
 
-
 ### Disqus ###
 disqus:
   shortname: your-short-name-disqus                     # Your website Shortname on disqus
-
 
 ### Analytics ###
 analytics:
   enabled: false                                        # Set true to enable analytics
   google:
     tracking_id: your-google-tracking-id
-
 
 ### Buy me a coffee ###
 # See https://www.buymeacoffee.com/
@@ -90,7 +83,6 @@ buymeacoffee:
   color: "#007bff"
   message: "Thank you for visiting."                    # Message to be displayed aside from the button for a few seconds.
   description: "Support me on Buy me a coffee!"
-
 
 ### Defaults for collections ###
 defaults:
@@ -109,7 +101,6 @@ defaults:
       type: "posts"
     values:
       comments: false                                   # Set to true to enable disqus comments
-
 
 ### Exclude from processing ###
 ## Add yours here if you have other stuff in your github.io page!!!**
