--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@
 # NOTE: It looks like you need to rebuild + repush everytime you update this _config.yml file
 
 ### Site Settings ###
-title               : Nicholas Wong's Jekyll Template 
+title               : Nicholas Wong's Jekyll Website 
 description         : >-
-                      IS 445 Lab 6 Jekyll Template Upload to GitHub Pages
+                      Personal Jekyll Website
 baseurl             : ""   # Change to empty quotes if you're hosting your site at <your-username>.github.io directly,
 #                                             otherwise will be hosted at <your-username>.github.io/{{base_url}}
 repository          : TheWongLife1.github.io  # Change to <your-username> for github OR, if that doesn't work <your-username>/<your-username>.github.io (Or remove it if you don't need remote projects) -- for example, I'd put "jnaiman" without the quotes after the ":" here
