--- a/_data/programming-skills.yml
+++ b/_data/programming-skills.yml
@@ -1,14 +1,14 @@
 - name: HTML5/CSS3
-  percentage: 90
+  percentage: 100
   level: Expert
-  color: danger
+  color: success
 
 - name: Go
-  percentage: 5
-  level: Beginner
-  color:
+  percentage: 100
+  level: Expert
+  color: success
 
 - name: Python
-  percentage: 90
+  percentage: 100
   level: Expert
-  color: secondary
+  color: success
